--- a/config/clients/10.102.188.136.ini
+++ b/config/clients/10.102.188.136.ini
@@ -1,36 +1,24 @@
-[Variables hack]
+[One]
 rank = 1
 desc = assigning variable cheat code
-commands = 	[
-		"${WINIMG}=Echo /tmp/firefox.png",
-		"${PLAY}=Echo /tmp/play.pat",
-		"${PAUSE}=Echo /tmp/pause.pat",
-		"${SKIP}=Echo /tmp/skip-ad.pat",
-		"${THEATER}=Echo /tmp/theater.pat"
-		]
-[Start firefox only if it is dead]
+commands = [
+	"${WINIMG}=Echo /tmp/firefox.png",
+	"${PLAY}=Echo /tmp/play.pat",
+	"${PAUSE}=Echo /tmp/pause.pat",
+	"${SKIP}=Echo /tmp/skip-ad.pat",
+	"${THEATER}=Echo /tmp/theater.pat",
+	]
+
+
+[One]
 rank = 2
-desc = firefox start
-commands = ["Process dead firefox", "Process spawn firefox"]
+desc = assigning variable cheat code
+commands = [
+	"${WINIMG}=Echo /tmp/firefox.png",
+	"${PLAY}=Echo /tmp/play.pat",
+	"${PAUSE}=Echo /tmp/pause.pat",
+	"${SKIP}=Echo /tmp/skip-ad.pat",
+	"${THEATER}=Echo /tmp/theater.pat",
+	]
 
-[Auto Key test start firefox]
-rank = 3
-desc = Keyboard automation test
-commands = ["Sleep 10", "${WIN}=Desktop windowid firefox","Desktop windowfocus ${WIN}", "Desktop keypress F6", "Desktop type https://www.youtube.com/watch?v=sP6oTd_OhoA", "Desktop keypress Return"]
-
-
-[Process kill]
-rank = 4 
-desc = kill firefox
-commands = ["Sleep 10", "Desktop windowclose ${WIN}"]
-
-[Network Restart] 
-rank = 5 
-desc = Restart Network 
-commands = ["Network restart"]
-
-[ip test]
-rank = 6
-desc = IP check 
-commands = ["IP contains eth0 10.150.135.", "IP equals eth0 10.150.135.54"] 
 
