--- a/config/server/server.ini
+++ b/config/server/server.ini
@@ -3,6 +3,6 @@ downloadUrl = ftp://10.10.10.10/client.tgz
 username = admin
 password = admin
 installPath = /tmp
-profile = rootlol
+profile = root
 
 
