Makes port and interval configurable.

--- a/config/server/server.ini
+++ b/config/server/server.ini
@@ -1,8 +1,10 @@
 [Server]
-downloadUrl = ftp://10.10.10.10/client.tgz
 username = admin
-password = admin
-installPath = /tmp
 profile = root
+installPath = /tmp
+downloadUrl = ftp://10.10.10.10/client.tgz
+zombieInterval = 120
+password = admin
+port = 8080
 
 
