Use Flask as repository if needed.

--- a/config/server/server.ini
+++ b/config/server/server.ini
@@ -1,8 +1,8 @@
 [Server]
-username = admin
+username = root
 profile = root
 installPath = /tmp
-downloadUrl = ftp://10.10.10.10/client.tgz
+downloadUrl = http://192.168.0.22:8080/packages/agent.tgz
 zombieInterval = 120
 password = admin
 port = 8080
