Adds GUI test sample

--- a/config/profiles/root/clients/10.102.188.136.ini
+++ b/config/profiles/root/clients/10.102.188.136.ini
@@ -10,7 +10,7 @@ commands = [
 	]
 
 
-[One]
+[Two]
 rank = 2
 desc = assigning variable cheat code
 commands = [
@@ -22,3 +22,14 @@ commands = [
 	]
 
 
+[Launch email client]
+rank = 3
+desc = launches thunderbird from ubuntu taskbar
+commands = [
+	"${PATTERN}=Echo /tmp/mail.pat",
+	"${SCREENSHOT}=Echo /tmp/screen",
+	"${FTP_SERVER}=Echo 10.150.124.93",
+	"Ftp download ${FTP_SERVER} anonymous anonymous ${PATTERN} mail.pat",
+	"Desktop screenshot ${SCREENSHOT}",
+	"Desktop mouseclick 0 ${SCREENSHOT} ${PATTERN}"
+	]
