--- a/config/profiles/root/tests/testbank.ini
+++ b/config/profiles/root/tests/testbank.ini
@@ -34,3 +34,15 @@ commands = ["Network restart"]
 rank = 7
 desc = IP check
 commands = ["IP contains eth0 10.150.135.", "IP equals eth0 10.150.135.54"]
+
+[Launch email client]
+rank = 8
+desc = launches thunderbird from ubuntu taskbar
+commands = [
+	"${PATTERN}=Echo /tmp/mail.pat",
+	"${SCREENSHOT}=Echo /tmp/screen",
+	"${FTP_SERVER}=Echo 10.150.124.93",
+	"Ftp download ${FTP_SERVER} anonymous anonymous ${PATTERN} mail.pat",
+	"Desktop screenshot ${SCREENSHOT}",
+	"Desktop mouseclick 0 ${SCREENSHOT} ${PATTERN}"
+	]
