Adds alpha test bank for ui test.

--- a/config/profiles/root/tests/testbank.ini
+++ b/config/profiles/root/tests/testbank.ini
@@ -1,48 +1,159 @@
-[One]
+[Gdm login]
 rank = 1
 desc = assigning variable cheat code
-commands = 	[
-			"${WINIMG}=Echo /tmp/firefox.png",
-			"${PLAY}=Echo /tmp/play.pat",
-			"${PAUSE}=Echo /tmp/pause.pat",
-			"${SKIP}=Echo /tmp/skip-ad.pat",
-			"${THEATER}=Echo /tmp/theater.pat"
+commands = ["${GDM_USER}=Echo thinuser",
+	"${SUDO_PASSWORD}=Echo admin",
+	"${GDM_PASSWORD}=Echo thinuser",
+	"${DOMAIN}=Echo Local",
+	"Gdm login ${SUDO_PASSWORD} ${GDM_USER} {Tab} {Clear} ${DOMAIN} {Space} login {Tab} {Tab} {Return} ${GDM_PASSWORD} {Tab} {Tab} {Tab} {Return} {Return}",
+	"Sleep 30"
+	]
+
+
+[IP Check]
+rank = 2
+desc = Checking IP
+commands = ["${ETHERNET_IP}=Echo 10.150.135.71",
+	"IP equals eth0 ${ETHERNET_IP}",
+	"Sleep 60"
+	]
+
+
+[Settings panel GUI test]
+rank = 3
+desc = to download the images
+commands = ["${FTP_SERVER}=Echo 10.150.135.62",
+	"${FTP_USER}=Echo anonymous",
+	"${FTP_PASSWORD}=Echo anonymous",
+	"${LOCAL_PANEL_IMG}=Echo /tmp/panelsettings.png",
+	"${LOCAL_SETTINGS_IMG}=Echo /tmp/Settings.png",
+	"${FTP_PANEL_IMG}=Echo /panelsettings.png",
+	"${FTP_SETTINGS_IMG}=Echo /Settings.png",
+	"Ftp download  ${FTP_SERVER} ${FTP_USER} ${FTP_PASSWORD} ${LOCAL_PANEL_IMG} ${FTP_PANEL_IMG}",
+	"Ftp download ${FTP_SERVER} ${FTP_USER} ${FTP_PASSWORD} ${LOCAL_SETTINGS_IMG} ${FTP_SETTINGS_IMG}",
+	"Desktop screenshot /tmp/stateA.png",
+	"Desktop mouseclick 0 /tmp/stateA.png /tmp/panelsettings.png"
+	]
+
+
+
+[Check ThinLinux Build Version]
+rank = 4
+desc = Test thinlinux Build version
+commands = ["${VERSION}=Echo 1.0.0.29",
+			"Sleep 5",
+            "RegTest System Version ${VERSION}",
+            "Skip 2 3"
+            ]
+
+[Call for Delayed Upgrade]
+rank = 5
+desc = Update thin linux to next version
+commands = ["Sleep 5", 
+	    "${FTPServer}=Echo 10.150.135.62",
+        "${RemoteFile}=Echo /INISettings/DelayedUpdate.ini",
+        "${LocalFile}=Echo /tmp/wnos.ini",
+        "Ftp download ${FTPServer}  chaitra itschy@123  ${LocalFile}  /INISettings/DelayedUpdate.ini",
+	    "Ftp upload ${FTPServer}  chaitra itschy@123  /tmp/wnos.ini /wyse/wlx/wlx.ini",
+	    "Sleep 2",
+	    "Network off",
+	    "Network on",
+	    "Process exec parse_ini /tmp/wnos.ini",
+	    "Network restart",
+	    "Sleep 90",
+	    "Reboot admin"]
+
+[Test for successful upgrade/downgrade]
+rank = 6 
+desc = Get upgrade/downgrade version
+commands = ["${VERSION}=Echo 1.0.0.29",
+			"Sleep 5", 
+			"RegTest System Version ${VERSION}"
 			]
 
-[Three]
-rank = 3
-desc = firefox start
-commands = ["Sleep 10", "Process dead firefox", "Process spawn firefox"]
-
-[Four]
-rank = 4
-desc = Keyboard automation test
-commands = ["Sleep 10", "${WIN}=Desktop windowid firefox","Desktop windowfocus ${WIN}", "Desktop keypress F6", "Desktop type https://www.youtube.com/watch?v=sP6oTd_OhoA", "Desktop keypress Return"]
-
-
-[Five]
-rank = 5
-desc = kill firefox
-commands = ["Sleep 10", "Desktop windowclose ${WIN}"]
-
-[Six]
-rank = 6
-desc = Restart Network
-commands = ["Network restart"]
-
-[Seven]
+[INI download for Citrix connection]
 rank = 7
-desc = IP check
-commands = ["IP contains eth0 10.150.135.", "IP equals eth0 10.150.135.54"]
+desc = Citrix INI download
+commands = [ "Sleep 5",
+			"${FTP_Server}=Echo 10.150.135.62", 
+            "Ftp download  ${FTP_Server}  chaitra itschy@123 /tmp/wnos.ini  /INISettings/ICA.ini",
+	    	"Ftp upload  ${FTP_Server}  chaitra itschy@123 /tmp/wnos.ini /wyse/wlx/wlx.ini",
+            "Sleep 5",
+            "Network off",
+            "Network on",
+            "Process exec parse_ini /tmp/wnos.ini",
+            "Sleep 5",
+            "File exists /home/thinuser/.ICAClient/appsrv_ICA45.ini" ]
 
-[Launch email client]
+[Launch ICA]
 rank = 8
-desc = launches thunderbird from ubuntu taskbar
+desc = Launch citrix session
+commands = ["${ICA_PATH}=Echo /usr/lib/ICAClient/wfica.orig",
+		"File exists /home/thinuser/.ICAClient/appsrv_ICA45.ini",
+	    "Process thrive /etc/addons.d/ICA/launch start ICA45",
+	    "Sleep 20",
+ 	    "Process alive ${ICA_PATH}"
+ 	    ]
+
+
+[INI Downloadfor RDP Connection]
+rank = 9
+desc = RDP INI
+commands = ["Sleep 5",
+		"${RDP_CONN_NAME}=Echo TestRDP",
+		"${RDP_INI_PATH}=Echo /INISettings/RDP.ini",
+		"${WLX_PATH}=Echo /wyse/wlx/wlx.ini",
+		"Ftp download  ${FTPServer}  chaitra itschy@123 /tmp/wnos.ini ${RDP_INI_PATH}",
+	    "Ftp upload  ${FTPServer}  chaitra itschy@123 /tmp/wnos.ini ${WLX_PATH}",
+	    "Sleep 5",
+	    "Network off",
+	    "Network on",
+	    "Process exec parse_ini /tmp/wnos.ini",
+	    "Sleep 5",
+	    "File exists /home/thinuser/.local/share/applications/${RDP_CONN_NAME}.desktop"]
+
+[INI RDP launch]
+rank = 10
+desc = RDP connection launch
+commands = ["Sleep 5",
+			"${RDP_CONN_NAME}=Echo TestRDP",
+			"${RDP_BINARY}=Echo /usr/bin/rdpclient",
+			"File exists /home/thinuser/.local/share/applications/${RDP_CONN_NAME}.desktop",
+        	"Process thrive /etc/addons.d/ICA/launch start ${RDP_CONN_NAME}",
+        	"Sleep 20",
+			"Process alive ${RDP_BINARY}"]
+
+[CCM Launcher]
+desc = Launch CCM server
+rank = 11
 commands = [
-	"${PATTERN}=Echo /tmp/mail.pat",
-	"${SCREENSHOT}=Echo /tmp/screen",
-	"${FTP_SERVER}=Echo 10.150.124.93",
-	"Ftp download ${FTP_SERVER} anonymous anonymous ${PATTERN} mail.pat",
-	"Desktop screenshot ${SCREENSHOT}",
-	"Desktop mouseclick 0 ${SCREENSHOT} ${PATTERN}"
+	"${CCM_URL}=Echo https://dsq2.wyselab.com",
+	"${CCM_USER}=Echo chaitra@wyse.com",
+	"${CCM_PASSWORD}=Echo Wyse#123",
+	"Selenium start firefox",
+	"Selenium open ${CCM_URL}",
+	"Sleep 6",
+	"Selenium clickname j_username",
+	"Selenium fillname j_username ${CCM_USER}",
+	"Selenium clickname j_password",
+	"Selenium fillname j_password ${CCM_PASSWORD}",
+	"Selenium clickid signInButton",
+	"Sleep 10",
+	"Selenium clickxpath //a[@href='/ccm-web/admin/groups']",
+	"Sleep 10",
+	"Selenium clickxpath //*[@id='editPolicies']/div/a",
+	"Selenium clickxpath //*[@id='editPolicies']/div/div/ul[2]/li[4]/a",
+	"Sleep 10",
+	"Selenium clickxpath //*[@id='settings_filters']/ul/li[12]/a",
+	"Sleep 6",
+	"Selenium clickxpath //*[@id='settings_content']/div[1]/div[3]/p[2]/span/a",
+	"Sleep 5",
+	"Selenium  fillxpath //*[@id='settings_content']/div[2]/div/div[2]/div[1]/div[2]/span/input TestDemo",
+	"Selenium fillxpath //*[@id='settings_content']/div[2]/div/div[2]/div[3]/div[2]/span/input www.dell.com",
+	"Selenium clickxpath //*[@id='saveChangedSettings']"
 	]
+
+[Finish selenium session]
+desc = Selenium Worker Stop
+rank = 12
+commands = ["Selenium stop"]
