--- a/config/profiles/root/clients/10.10.10.10.ini
+++ b/config/profiles/root/clients/10.10.10.10.ini
@@ -15,26 +15,26 @@ rank = 2
 desc = Downloads image to drive.
 commands = [
         "Serial command ${DEVICE} 'reset now' >",
-        "Serial sendfile ${Device} 'image upload' /tmp/norutil.rom_img >",
-        "Serial command ${Device} 'image mem' >",
-        "Serial command ${Device} 'image run mem' >",
-        "Serial command ${Device} 'erase all' >",
-        "Serial sendfile ${Device} 'upload' /tmp/mfg_nor_slot >",
-        "Serial command ${Device} 'not set IMG0' >",
-        "Serial command ${Device} 'nor erase' >",
-        "Serial command ${Device} 'nor prog' >",
-        "Serial command ${Device} 'nor cmp' >",
-        "Serial command ${Device} 'reset now' >",
-        "Serial command ${Device} 'image run 0' >",
-        "Serial command ${Device} 'mfginfo set spidh_word0 ${WORD0}' >",
-        "Serial command ${Device} 'fginfo set spidh_word1 ${WORD1}' >",
-        "Serial command ${Device} 'mfginfo set serial_num SN12345' >",
-        "Serial command ${Device} 'mfginfo save' >",
-        "Serial command ${Device} 'reset now' >",
-        "Serial command ${Device} 'image run 0' >",
-        "Serial sendfile ${Device} 'image upload' ${VCA} >",
-        "Serial command ${Device} 'vca slot 0' >",
-        "Serial command ${Device} 'reset now' >",
-        "Serial command ${Device} 'image run 0' >"
+        "Serial sendfile ${DEVICE} 'image upload' /tmp/norutil.rom_img >",
+        "Serial command ${DEVICE} 'image mem' >",
+        "Serial command ${DEVICE} 'image run mem' >",
+        "Serial command ${DEVICE} 'erase all' >",
+        "Serial sendfile ${DEVICE} 'upload' /tmp/mfg_nor_slot >",
+        "Serial command ${DEVICE} 'not set IMG0' >",
+        "Serial command ${DEVICE} 'nor erase' >",
+        "Serial command ${DEVICE} 'nor prog' >",
+        "Serial command ${DEVICE} 'nor cmp' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >",
+        "Serial command ${DEVICE} 'mfginfo set spidh_word0 ${WORD0}' >",
+        "Serial command ${DEVICE} 'fginfo set spidh_word1 ${WORD1}' >",
+        "Serial command ${DEVICE} 'mfginfo set serial_num SN12345' >",
+        "Serial command ${DEVICE} 'mfginfo save' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >",
+        "Serial sendfile ${DEVICE} 'image upload' ${VCA} >",
+        "Serial command ${DEVICE} 'vca slot 0' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >"
     ]
 
