--- a/config/profiles/root/clients/127.0.0.1.ini
+++ b/config/profiles/root/clients/127.0.0.1.ini
@@ -1,34 +1,40 @@
-[Sleep test 1]
+[Variables]
 rank = 1
-desc = This command makes agent sleep
-commands = ["Sleep 1"]
+desc = Assigning variables
+commands = 	[
+        "${DEVICE}=Echo /dev/ttyS10",
+        "${NORUTIL}=Echo /tmp/norutil.rom_img",
+        "${MFG}=Echo /tmp/mfg_nor_slot.bin",
+        "${WORD0}=Echo 02010102",
+        "${WORD1}=Echo 03000000",
+        "${VCA}=Echo /tmp/aspen.vpkg"
+        ]
 
-[Sleep test 2]
+[Flash image]
 rank = 2
-desc = This command makes agent sleep
-commands = ["Sleep 1"]
+desc = Downloads image to drive.
+commands = [
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial sendfile ${DEVICE} 'image upload' /tmp/norutil.rom_img >",
+        "Serial command ${DEVICE} 'image mem' >",
+        "Serial command ${DEVICE} 'image run mem' >",
+        "Serial command ${DEVICE} 'erase all' >",
+        "Serial sendfile ${DEVICE} 'upload' /tmp/mfg_nor_slot >",
+        "Serial command ${DEVICE} 'not set IMG0' >",
+        "Serial command ${DEVICE} 'nor erase' >",
+        "Serial command ${DEVICE} 'nor prog' >",
+        "Serial command ${DEVICE} 'nor cmp' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >",
+        "Serial command ${DEVICE} 'mfginfo set spidh_word0 ${WORD0}' >",
+        "Serial command ${DEVICE} 'fginfo set spidh_word1 ${WORD1}' >",
+        "Serial command ${DEVICE} 'mfginfo set serial_num SN12345' >",
+        "Serial command ${DEVICE} 'mfginfo save' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >",
+        "Serial sendfile ${DEVICE} 'image upload' ${VCA} >",
+        "Serial command ${DEVICE} 'vca slot 0' >",
+        "Serial command ${DEVICE} 'reset now' >",
+        "Serial command ${DEVICE} 'image run 0' >"
+    ]
 
-[Sleep test 3]
-rank = 3
-desc = This command makes agent sleep
-commands = ["Sleep 1"]
-
-[Sleep test 4]
-rank = 4
-desc = This command makes agent sleep
-commands = ["Sleep 1"]
-
-[Sleep test 5]
-rank = 5
-desc = This command makes agent sleep
-commands = ["Sleep 1"]
-
-[screenshot 6]
-rank = 6
-desc = This command makes agent sleep
-commands = ["Desktop screenshot /tmp/${HOSTNAME}-${LOOP}.png"]
-
-[Repeat test]
-rank = 7
-desc = This command makes the agent repeat again
-commands = ["Repeat 5 6 2"]
