--- a/config/profiles/root/clients/10.206.118.107.ini
+++ b/config/profiles/root/clients/10.206.118.107.ini
@@ -2,16 +2,25 @@
 rank = 1
 desc = Assigning variables
 commands = 	[
-        "${DEVICE}=Echo /dev/ttyS10",
+        "${DEVICE}=Echo /dev/ttyUSB0",
         "${NORUTIL}=Echo /tmp/norutil.rom_img",
         "${MFG}=Echo /tmp/mfg_nor_slot.bin",
-        "${WORD0}=Echo 02010102",
+        "${WORD0}=Echo 01020103",
         "${WORD1}=Echo 03000000",
-        "${VCA}=Echo /tmp/aspen.vpkg"
+        "${VCA}=Echo /tmp/aspen_m2_1920gB_a0.vpkg"
+        ]
+
+[Download firmware]
+rank = 2
+desc = Downloads lates firmware from server
+commands = [
+        "Http download http://imsarchive.int.fusionio.com/snowbird/product/development/LATEST/Nvme_Linux_DebugR30_aspen_m2_1920gB_a0/build/nvme/aspen_m2_1920gB_a0/Debug/aspen_m2_1920gB_a0.vpkg /tmp/aspen_m2_1920gB_a0.vpkg",
+        "Http download http://imsarchive.int.fusionio.com/snowbird/product/development/LATEST/Nvme_Linux_DebugR30_aspen_m2_1920gB_a0/build/nvme/aspen_m2_1920gB_a0/Debug/bin/norutil.rom_img /tmp/norutil.rom_img",
+        "Http download http://imsarchive.int.fusionio.com/snowbird/product/development/LATEST/Nvme_Linux_DebugR30_aspen_m2_1920gB_a0/build/nvme/aspen_m2_1920gB_a0/Debug/bin/mfg_nor_slot.bin /tmp/mfg_nor_slot.bin"
         ]
 
 [Flash image]
-rank = 2
+rank = 3
 desc = Downloads image to drive.
 commands = [
         "Serial command ${DEVICE} 'reset now' >",
