--- a/config/profiles/root/clients/10.206.118.107.ini
+++ b/config/profiles/root/clients/10.206.118.107.ini
@@ -23,27 +23,25 @@ commands = [
 rank = 3
 desc = Downloads image to drive.
 commands = [
-        "Serial command ${DEVICE} 'reset now' >",
-        "Serial sendfile ${DEVICE} 'image upload' /tmp/norutil.rom_img >",
-        "Serial command ${DEVICE} 'image mem' >",
-        "Serial command ${DEVICE} 'image run mem' >",
-        "Serial command ${DEVICE} 'erase all' >",
-        "Serial sendfile ${DEVICE} 'upload' /tmp/mfg_nor_slot >",
-        "Serial command ${DEVICE} 'not set IMG0' >",
-        "Serial command ${DEVICE} 'nor erase' >",
-        "Serial command ${DEVICE} 'nor prog' >",
-        "Serial command ${DEVICE} 'nor cmp' >",
-        "Serial command ${DEVICE} 'reset now' >",
-        "Serial command ${DEVICE} 'image run 0' >",
-        "Serial command ${DEVICE} 'mfginfo set spidh_word0 ${WORD0}' >",
-        "Serial command ${DEVICE} 'fginfo set spidh_word1 ${WORD1}' >",
-        "Serial command ${DEVICE} 'mfginfo set serial_num SN12345' >",
-        "Serial command ${DEVICE} 'mfginfo save' >",
-        "Serial command ${DEVICE} 'reset now' >",
-        "Serial command ${DEVICE} 'image run 0' >",
-        "Serial sendfile ${DEVICE} 'image upload' ${VCA} >",
-        "Serial command ${DEVICE} 'vca slot 0' >",
-        "Serial command ${DEVICE} 'reset now' >",
-        "Serial command ${DEVICE} 'image run 0' >"
+        "Serial command ${DEVICE} 'reset now' 'Snowbird FE-L ROM'",
+        "Serial sendfile ${DEVICE} 'image upload' /tmp/norutil.rom_img 'Bytes Received'",
+        "Serial command ${DEVICE} 'image run mem' 'SPI NOR Manufacturer ID'",
+        "Serial command ${DEVICE} 'erase all' 'Step result : Pass'",
+        "Serial sendfile ${DEVICE} 'upload' /tmp/mfg_nor_slot 'Bytes Received'",
+        "Serial command ${DEVICE} 'nor set IMG0 'Step result : Pass",
+        "Serial command ${DEVICE} 'nor erase' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'nor prog' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'reset now' 'Snowbird FE-L ROM'",
+        "Serial command ${DEVICE} 'image run 0' 'Step Result : PASS'",
+        "Serial command ${DEVICE} 'mfginfo set spidh_word0 ${WORD0}' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'mfginfo set spidh_word1 ${WORD1}' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'mfginfo set serial_num SN12345' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'mfginfo save' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'reset now' 'Snowbird FE-L ROM'",
+        "Serial command ${DEVICE} 'image run 0' 'Snowbird FE-L BLRE Recovery Menu'",
+        "Serial sendfile ${DEVICE} 'image upload' ${VCA} 'Bytes Received'",
+        "Serial command ${DEVICE} 'vca slot 0' 'Step result : Pass'",
+        "Serial command ${DEVICE} 'reset now' 'Snowbird FE-L ROM'",
+        "Serial command ${DEVICE} 'image run 0' 'IFS: Metadata saved.'"
     ]
 
